[package]
name = "masto-thread-renderer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama_rocket = "0.12.0"
rocket = { version = "0.5.1", default-features = false }
figment = "0.10.7"
askama = { version = "0.12.0", features = [
    "config",
    "with-rocket",
    "mime",
    "mime_guess",
] }
anyhow = "1.0.99"
base_url = "1.1.0"
reqwest = { version = "0.12.23", features = [
    "json",
    "gzip",
    "deflate"
] }
serde = "1.0.223"
serde_json = "1.0.145"
html2md = "0.2.15"
env_logger = "0.11.6"
log = "0.4.28"

[dev-dependencies]
mockito = "1.6.1"

[build-dependencies]
npm_rs = "1.0.0"
