[package]
name = "masto-thread-renderer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama_rocket = "0.12.0"
rocket = { version = "0.5.1", default-features = false }
figment = "0.10.7"
askama = { version = "0.12.0", features = [
    "config",
    "with-rocket",
    "mime",
    "mime_guess",
] }
anyhow = "1.0.101"
base_url = "1.1.0"
reqwest = { version = "0.13.2", features = [
    "json",
    "gzip",
    "deflate"
] }
serde = "1.0.228"
serde_json = "1.0.149"
html2md = "0.2.15"
env_logger = "0.11.9"
log = "0.4.29"

[dev-dependencies]
mockito = "1.7.2"

[build-dependencies]
npm_rs = "1.0.0"
